[update]リテックポータルからのログイン連携作成

--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,8 @@ WORKUN_SECRET_KEY=""
 PASSPORT_PRIVATE_KEY=""
 PASSPORT_PUBLIC_KEY=""
 
+SALT_OF_JWT=""
+
 # サービスURL
 RETECH_PORTAL_URL=""              # ポータルURL
 KYOUIKUN_URL=""                   # きょういくんURL
